# generate_cover_mcp

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.sh
.github/workflows/: publish.yml
examples/: cli_demo.py  mcp_config.json  sample_articles.json  usage_example.py
src/generate_cover_mcp/: __init__.py  cli.py  generator.py  server.py
tests/: __init__.py  test_cli.py  test_cli_basic.py  test_generator.py
