[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generate-cover-mcp"
version = "0.1.0"
description = "MCP server for generating HTML-based covers using CoverMaster2"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "asyncio-mqtt",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
generate-cover-mcp = "generate_cover_mcp.server:main"
generate-cover = "generate_cover_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/generate-cover-mcp"
Repository = "https://github.com/yourusername/generate-cover-mcp"
Issues = "https://github.com/yourusername/generate-cover-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/generate_cover_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true